# SMQTK-Indexing

./: .gitlab-ci.yml  .mypy.ini  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci-unittests.yml  codeql.yml
docs/: algorithminterfaces.rst  conf.py  index.rst  installation.rst  release_process.rst  sphinx_server.py
docs/examples/: index.rst
docs/release_notes/: pending_release.rst  v0.15.0.rst  v0.16.0.rst  v0.17.0.rst  v0.18.0.rst
examples/: building_and_querying.ipynb
requirements/: opt_faiss_cpu.txt  opt_sklearn.txt  runtime.txt
smqtk_indexing/: __init__.py
smqtk_indexing/impls/hash_index/: linear.py  sklearn_balltree.py
smqtk_indexing/impls/lsh_functor/: itq.py  simple_rp.py
smqtk_indexing/impls/nn_index/: faiss.py  flann.py  lsh.py  mrpt.py
smqtk_indexing/interfaces/: hash_index.py  lsh_functor.py  nearest_neighbor_index.py
smqtk_indexing/utils/: __init__.py  bits.py  cli.py  iter_validation.py  metrics.py  progress_reporter.py
tests/impls/hash_index/: test_balltree.py  test_linear.py
tests/impls/lsh_functor/: test_itq.py
tests/impls/nn_index/: test_faiss.py  test_flann.py  test_lsh.py  test_mrpt.py
tests/interfaces/: test_hash_index.py  test_lsh_functor.py  test_nearest_neighbors_index.py
tests/utils/: test_bits.py  test_metrics.py
