[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

###############################################################################
[tool.poetry]
name = "smqtk_indexing"
# REMEMBER: `distutils.version.*Version` types can be used to compare versions
# from strings like this.
# SMQTK prefers to use the strict numbering standard when possible.
version = "0.16.0"
description = """\
    Algorithms, data structures and utilities around computing\
    descriptor k-nearest-neighbors."""
license = "BSD-3-Clause"
authors = ["Kitware, Inc. <smqtk-developers@kitware.com>"]
readme = "README.md"
repository = "https://github.com/Kitware/SMQTK-Indexing"
documentation = "https://smqtk-indexing.readthedocs.io/"
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = {version = "^0.8", python = "<3.7"}
numpy = "^1.19.5"
smqtk-core = ">=0.18.0"
smqtk-dataprovider = ">=0.16.0"
smqtk-descriptors = ">=0.16.0"
# Optional dependencies for extras
faiss-cpu = {version = "^1.7.0", optional = true}
scikit-learn = {version = "^0.24.1", optional = true}

[tool.poetry.extras]
faiss = ["faiss-cpu"]
sklearn = ["scikit-learn"]

[tool.poetry.dev-dependencies]
# CI
flake8 = "^3.9.0"
flake8-mutable = "^1.2.0"
mypy = "^0.812"
# Docs
# - Also see: `docs/readthedocs-reqs.txt` for use by RTD
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.1"
sphinx-argparse = "^0.2.5"
sphinx-prompt = "^1.4.0"
livereload = "^2.6.3"
# Testing
coverage = "^5.5"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
# Development
ipython = "^7.16.1"
jedi = "^0.17.2"

[tool.poetry.plugins."smqtk_plugins"]
# HashIndex
"smqtk_indexing.impls.hash_index.linear" = "smqtk_indexing.impls.hash_index.linear"
"smqtk_indexing.impls.hash_index.sklearn_balltree" = "smqtk_indexing.impls.hash_index.sklearn_balltree"
# LshFunctor
"smqtk_indexing.impls.lsh_functor.itq" = "smqtk_indexing.impls.lsh_functor.itq"
"smqtk_indexing.impls.lsh_functor.simple_rp" = "smqtk_indexing.impls.lsh_functor.simple_rp"
# NearestNeighborIndex
"smqtk_indexing.impls.nn_index.faiss" = "smqtk_indexing.impls.nn_index.faiss"
"smqtk_indexing.impls.nn_index.flann" = "smqtk_indexing.impls.nn_index.flann"
"smqtk_indexing.impls.nn_index.lsh" = "smqtk_indexing.impls.nn_index.lsh"
"smqtk_indexing.impls.nn_index.mrpt" = "smqtk_indexing.impls.nn_index.mrpt"

###############################################################################
[tool.pytest.ini_options]
addopts = [
    "-lv",                  # Show local in trace-backs.
    "--doctest-modules",    # Increased verbosity.
    "--tb=long",            # Trace-back print mode.
    "--cov=smqtk_indexing", # Cover our package specifically
    "--cov-report=term",    # Coverage report to terminal
]
testpaths = [
    "tests",
    "smqtk_indexing",
]
norecursedirs = [
    "tests/data"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
